# Neuron_optimization_RL

./: .gitignore  Citation.cff  LICENSE.md  README.md  SparsePlace.py  TI_sim.py  TI_sim_1d.py  bayes_opt_test.py  callbacks.py  cellChooser.hoc  compare_vs_bayesopt_baseline.py  config.py  editMorphology.hoc  elec_field.py  environment.py  init_setup_run_once.sh  interpCoordinates.hoc  invasive_sim.py  multiple_neuron_pointElec.py  neuron_actor.py  neuron_model_serial.py  plot_TI_sim.py  plot_neurons.py  plot_sinusoid_and_TI_waveform.py  plot_summary_non-invasive.py  plot_summary_pointElec.py  pointElec_simulation.py  profile_memory.py  pyproject.toml  requirements.txt  run_pointElec_sim.sh  setPointers.hoc  train.py  uniform_sim.py  utils.py
cells/L23_LBC_cNAC187_4/: createsimulation.hoc  template.hoc
cells/L23_LBC_cNAC187_5/: createsimulation.hoc  template.hoc
cells/L23_PC_cADpyr229_1/: createsimulation.hoc
cells/L23_PC_cADpyr229_2/: template.hoc
criterions/: __init__.py  criterion.py  min_energy.py  selectivity.py
docs/: neuron-assets.md  project-structure.md
models/: PPO.py  RecurrentPPO.py  SAC.py  TD3.py  TQC.py  __init__.py
plots/20260417_175754_td3/: debug_metrics.csv
plots/20260417_210329_td3/: debug_metrics.csv
plots/20260417_211517_td3/: debug_metrics.csv
plots/20260417_215451_td3/: debug_metrics.csv
plots/20260417_220627_td3/: debug_metrics.csv
plots/20260417_233236_td3/: debug_metrics.csv
plots/20260418_124952_sac/: debug_metrics.csv
scripts/: init_setup_run_once.sh  run_point_electrode_sim.sh
waveforms/: __init__.py  charge_balanced.py  fourier_approx.py  full_sequence.py  legendre3.py  square.py  two_sines.py  waveform.py
(+151 files in other folders)
