[project]
name = "simulation"
version = "0.1.0"
description = "RL-based stimulation waveform optimization using NEURON."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ax-platform>=0.3.7",
    "gymnasium>=1.1.1",
    "hoc2swc>=0.1.2",
    "matplotlib==3.7.0",
    "neuron==8.2.2",
    "numpy==1.24.3",
    "pandas==2.0.2",
    "plotly==5.15.0",
    "pyshtools==4.10.3",
    "ray==2.6.3",
    "sb3-contrib>=2.7.1",
    "scikit-learn==1.2.1",
    "scipy==1.8.0",
    "seaborn==0.13.0",
    "setuptools==80.9.0",
    "stable-baselines3[extra]>=2.7.1",
]

[project.scripts]
simulation-train = "simulation.training.train:main"
simulation-compare = "simulation.training.compare_vs_bayesopt_baseline:main"
simulation-point-electrode = "simulation.experiments.point_electrode:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["simulation*"]

[tool.setuptools.package-data]
simulation = ["neuron/assets/**/*"]

[build-system]
requires = ["setuptools>=68,<81"]
build-backend = "setuptools.build_meta"
